# rpc-stub

./: CMakeLists.txt  Cargo.toml  DemoStub.csproj  Package.swift  README.md  buf.gen.yaml  build.gradle  build.gradle.kts  build.sbt  composer.json  demo_stub.gemspec  go.mod  mix.exs  package.json  pubspec.yaml  pyproject.toml
Sources/DemoStub/: v1.grpc.swift  v1.pb.swift
include/demo/: v1.grpc.pb.h  v1.pb.h
lib/demo/: v1_services_pb.rb
proto/demo/: v1.proto
src/: lib.rs  v1.pb.cc
src/demo_stub/demo/: v1_pb2.py
